--- a/RetiCare/pubspec.yaml
+++ b/RetiCare/pubspec.yaml
@@ -1,4 +1,4 @@
-name: quiz_app
+name: RetiCare
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -51,6 +51,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
+    - assets/objectsNanimals/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
