--- a/RetiCare/pubspec.yaml
+++ b/RetiCare/pubspec.yaml
@@ -52,6 +52,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/objectsNanimals/
+    - assets/patterns/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
