--- a/RetiCare/pubspec.yaml
+++ b/RetiCare/pubspec.yaml
@@ -53,6 +53,7 @@ flutter:
     - assets/icons/
     - assets/objectsNanimals/
     - assets/patterns/
+    - assets/care/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
