--- a/RetiCare/pubspec.yaml
+++ b/RetiCare/pubspec.yaml
@@ -1,4 +1,4 @@
-name: RetiCare
+name: AgeWise
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -29,7 +29,7 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   # to handle SVGs for Android, iOS, and Web
-  flutter_svg: ^0.21.0+1
+  flutter_svg: ^0.23.0+1
 
   # state management, intelligent dependency injection, and route management
   get: ^4.1.4
@@ -38,8 +38,15 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_launcher_icons: ^0.9.2
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+flutter_icons:
+  image_path: "assets/icons/icon.png"
+  android: true
+  ios: true
 
 # The following section is specific to Flutter.
 flutter:
